--- a/assignment12.ipynb
+++ b/assignment12.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "def fun(x):\n",
     " \n",
-    "\t# f = np.sin(x) * (1 / (1 + np.exp(-x))) \n",
+    "\n",
     "\tf = np.abs(x) * np.sin(x)\n",
     "\n",
     "\treturn f"
@@ -558,6 +558,23 @@
     "plt.plot(x,minimum_val4,'orangered', label = \"pow(2,10)\")\n",
     "plt.plot(x,minimum_val5,'brown',label = \"pow(2,-10)\")\n",
     "plt.legend(loc='best')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111111\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(111111)"
    ]
   }
  ],
